--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "crypto-js": "^3.1.9-1",
     "vue": "^2.6.10"
   },
   "devDependencies": {
